test/files/neg/t545.check
t545.scala:4: error: value blah is not a member of Test.Foo
  val x = foo.blah match {
              ^
one error found
